--- a/DatingApp-SPA/src/app/home/home.component.html
+++ b/DatingApp-SPA/src/app/home/home.component.html
@@ -13,7 +13,7 @@
       <div class="col-4">
           <!-- to display register component if user click on register link -->
           <!-- display data from parent to child [property]-->
-          <app-register [valuesFromHome]="values" (cancelRegister)="cancelRegisterMode($event)" ></app-register>
+          <app-register (cancelRegister)="cancelRegisterMode($event)" ></app-register>
       </div>
     </div>
   </div>
